# heed

./: .azure-pipelines.yml  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  HEED_CORE_STATUS.md  LICENSE  README.md  convert-to-heed3.sh  lmdb_api_analysis.md
.github/workflows/: rust.yml  test.yml
examples/: all-types-dyn.rs  all-types-heed3.rs  all-types-poly.rs  all-types.rs  clear-database.rs  cursor-append.rs  custom-comparator.rs  encrypt-heed3.rs  heed3-all-types.rs  heed3-encrypted.rs  heed3-encryption.rs  multi-env.rs  nested.rs  prev-snapshot.rs  rmp-serde.rs  unsafe-nested.rs
heed/: Cargo.toml  build.rs
heed-core/: Cargo.toml  FILE_ORGANIZATION.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_GUIDE.md
heed-core/.cargo/: config.toml
heed-core/benches/: btree_ops.rs  db_comparison.rs  page_alloc.rs
heed-core/examples/: bench_all_dbs.rs  bench_simple.rs  comparator_demo.rs  custom_comparator.rs  debug_branch_page.rs  debug_btree_insert.rs  debug_catalog_detailed.rs  debug_commit_flow.rs  debug_cow_simple.rs  debug_cursor_nav.rs  debug_delete_issue.rs  debug_env.rs  debug_init.rs  debug_inner_databases.rs  debug_insert.rs  debug_main_db.rs  debug_meta_page.rs  debug_missing_keys.rs  debug_overflow_cow.rs  fixed_size_demo.rs  reader_monitoring.rs  simple.rs  simple_catalog.rs  test_basic.rs  test_basic_db.rs  test_btree_delete.rs  test_btree_split.rs  test_catalog.rs  test_catalog_fix.rs  test_catalog_persistence.rs  test_copy.rs  test_cow.rs  test_cow_overflow.rs  test_cursor.rs  test_delete_detailed.rs  test_freelist.rs  test_freelist_basic.rs  test_freelist_direct.rs  test_freelist_simple.rs  test_freelist_state.rs  (+6 more)
heed-core/scripts/: generate-perf-dashboard.py  perf-regression-test.sh  run-perf-suite.sh
heed-core/src/: branch.rs  branch_v2.rs  btree.rs  btree_tests.rs  catalog.rs  checksum.rs  comparator.rs  copy.rs  cursor.rs  db.rs  dupsort.rs  env.rs  error.rs  fixed_size.rs  freelist.rs  io.rs  io_test.rs  lib.rs  meta.rs  nested_txn.rs  node.rs  overflow.rs  page.rs  reader.rs  tree_utils.rs  txn.rs
heed-core/tests/: lmdb_comparison.rs  quickcheck_comparison.rs  test_catalog.rs  test_cursor.rs  test_debug.rs  test_debug_split.rs  test_dupsort.rs  test_initial_db.rs  test_page_capacity.rs  test_reader_tracking.rs  test_rebalancing.rs  test_rebalancing_debug.rs  test_simple_delete.rs  test_simple_overflow.rs
heed-master3-proc-macro/: Cargo.toml
heed-master3-proc-macro/src/: lib.rs
heed-traits/: Cargo.toml
heed-traits/src/: lib.rs
heed-types/: Cargo.toml
heed-types/src/: bytes.rs  cow_slice.rs  cow_type.rs  decode_ignore.rs  integer.rs  lazy_decode.rs  lib.rs  owned_slice.rs  owned_type.rs  serde_bincode.rs  serde_json.rs  serde_rmp.rs  str.rs  unaligned_slice.rs  unaligned_type.rs  unit.rs
heed/examples/: all-types-poly.rs  all-types.rs  clear-database.rs  conditional-reserve.rs  cursor-append.rs  custom-comparator.rs  custom-dupsort-comparator.rs  custom-key-cmp.rs  custom_comparator.rs  encrypt.rs  multi-env.rs  nested-read-only.rs  nested-rtxns.rs  nested.rs  non-mutable-rwtxn.rs  rmp-serde.rs
heed/src/: cookbook.rs  cursor.rs  database.rs  env.rs  iteration_method.rs  lazy_decode.rs  lib.rs  lmdb_error.rs  reserved_space.rs  txn.rs
heed/src/database/: database.rs  encrypted_database.rs
heed/src/databases/: database.rs  encrypted_database.rs
heed/src/db/: database.rs  mod.rs  multi.rs  poly_database.rs  polymorph.rs  uniform.rs
heed/src/env/: clear.rs  encrypted.rs  env.rs  env_open_options.rs  mod.rs
heed/src/envs/: encrypted_env.rs  env.rs  env_open_options.rs  mod.rs
heed/src/iter/: iter.rs  mod.rs  prefix.rs  range.rs
heed/src/iterator/: iter.rs  mod.rs  prefix.rs  range.rs
heed/src/mdb/: lmdb_error.rs  lmdb_ffi.rs  lmdb_flags.rs  mdbx_error.rs  mdbx_ffi.rs  mdbx_flags.rs  mod.rs
heed3/: Cargo.toml
heed3-encryption/: Cargo.toml
heed3/examples/: heed3-encrypted-parallel-read.rs
lmdb-master-sys/: Cargo.toml  bindgen.rs  build.rs
lmdb-master-sys/src/: bindings.rs  lib.rs
lmdb-master-sys/tests/: lmdb.rs  simple.rs
lmdb-master-sys/tests/fixtures/testdb-32/: lock.mdb
lmdb-master3-sys/: Cargo.toml  README.md  bindgen.rs  build.rs
lmdb-master3-sys/src/: bindings.rs  lib.rs
lmdb-master3-sys/tests/: lmdb.rs  simple.rs
lmdb-master3-sys/tests/fixtures/testdb/: data.mdb  lock.mdb
lmdb-master3-sys/tests/fixtures/testdb-32/: data.mdb
src/: cursor.rs  database.rs  db.rs  env.rs  flags.rs  lib.rs  lmdb_error.rs  main.rs  traits.rs  txn.rs  types.rs
src/db/: dyn_typed.rs  mod.rs  polymorph.rs  typed.rs  uniform.rs
src/iter/: iter.rs  mod.rs  prefix.rs  range.rs
src/mdb/: lmdb_ffi.rs  mod.rs
src/types/: cow_slice.rs  cow_type.rs  ignore.rs  mod.rs  owned_slice.rs  owned_type.rs  serde.rs  serde_bincode.rs  serde_json.rs  str.rs  unaligned_slice.rs  unaligned_type.rs  unit.rs
