[package]
name = "heed"
version = "0.6.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A fully typed LMDB wrapper with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
keywords = ["lmdb", "database", "storage", "typed"]
categories = ["database", "data-structures"]
readme = "README.md"
edition = "2018"

[dependencies]
bincode = { version = "1.2.0", optional = true }
byteorder = { version = "1.3", default-features = false }
lmdb-rkv-sys = "0.9.5"
libc = "0.2.62"
once_cell = "1.2.0"
page_size = "0.4.1"
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0.41", optional = true }
zerocopy = "0.2.8"

[dev-dependencies]
serde = { version = "1.0.101", features = ["derive"] }

[features]
default = ["serde-bincode", "serde-json"]
serde-bincode = ["serde", "bincode"]
serde-json = ["serde", "serde_json"]
# serde_json features
preserve_order = ["serde_json/preserve_order"]
arbitrary_precision = ["serde_json/arbitrary_precision"]
raw_value = ["serde_json/raw_value"]
unbounded_depth = ["serde_json/unbounded_depth"]
