[package]
name = "heed"
version = "0.7.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A fully typed LMDB wrapper with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
keywords = ["lmdb", "database", "storage", "typed"]
categories = ["database", "data-structures"]
readme = "README.md"
edition = "2018"

[dependencies]
bincode = { version = "1.2.1", optional = true }
byteorder = { version = "1.3.4", default-features = false }
libc = "0.2.68"
lmdb-rkv-sys = "0.11.0"
once_cell = "1.3.1"
page_size = "0.4.2"
serde = { version = "1.0.105", optional = true }
serde_json = { version = "1.0.49", optional = true }
zerocopy = "0.3.0"

[target.'cfg(windows)'.dependencies]
url = "2.1.1"

[dev-dependencies]
serde = { version = "1.0.105", features = ["derive"] }

[features]
default = ["serde-bincode", "serde-json"]
serde-bincode = ["serde", "bincode"]
serde-json = ["serde", "serde_json"]
# serde_json features
preserve_order = ["serde_json/preserve_order"]
arbitrary_precision = ["serde_json/arbitrary_precision"]
raw_value = ["serde_json/raw_value"]
unbounded_depth = ["serde_json/unbounded_depth"]
