[package]
name = "heed"
version = "0.12.1"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A fully typed LMDB/MDBX wrapper with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
keywords = ["lmdb", "database", "storage", "typed"]
categories = ["database", "data-structures"]
readme = "../README.md"
edition = "2018"

[dependencies]
libc = "0.2.80"
lmdb-rkv-sys = { git = "https://github.com/meilisearch/lmdb-rs" }
once_cell = "1.5.2"
page_size = "0.4.2"
synchronoise = "1.0.0"

[target.'cfg(windows)'.dependencies]
url = "2.2.0"

[features]
default = []

# The NO_TLS flag is automatically set on Env opening and
# RoTxn implements the Sync trait. This allow the user to reference
# a read-only transaction from multiple threads at the same time.
sync-read-txn = []
