[package]
name = "heed-master3-proc-macro"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A proc macro to simplify the maintenance of the heed and heed3 crates"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
