[package]
name = "heed-types"
version = "0.7.2"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "The types used with the fully typed LMDB wrapper, heed"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
readme = "../README.md"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", optional = true }
bytemuck = { version = "1.12.1", features = ["extern_crate_alloc", "extern_crate_std"] }
byteorder = "1.4.3"
heed-traits = { version = "0.7.0", path = "../heed-traits" }
serde = { version = "1.0.144", optional = true }
serde_json = { version = "1.0.85", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["serde-bincode", "serde-json"]
serde-bincode = ["serde", "bincode"]
serde-json = ["serde", "serde_json"]
# serde_json features
preserve_order = ["serde_json/preserve_order"]
arbitrary_precision = ["serde_json/arbitrary_precision"]
raw_value = ["serde_json/raw_value"]
unbounded_depth = ["serde_json/unbounded_depth"]
