[package]
name = "heed"
version = "0.12.1"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A fully typed LMDB wrapper with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
keywords = ["lmdb", "database", "storage", "typed"]
categories = ["database", "data-structures"]
readme = "../README.md"
edition = "2021"

[dependencies]
bytemuck = "1.12.1"
byteorder = { version = "1.4.3", default-features = false }
heed-traits = { version = "0.7.0", path = "../heed-traits" }
heed-types = { version = "0.7.2", path = "../heed-types" }
libc = "0.2.132"
lmdb-master3-sys = { version = "0.1.0", path = "../lmdb-master3-sys" }
once_cell = "1.14.0"
page_size = "0.4.2"
serde = { version = "1.0.144", features = ["derive"], optional = true }
synchronoise = "1.0.1"

[dev-dependencies]
serde = { version = "1.0.144", features = ["derive"] }
bytemuck = { version = "1.12.1", features = ["derive"] }
tempfile = "3.3.0"

[target.'cfg(windows)'.dependencies]
url = "2.3.1"

[features]
# The `serde` feature makes some types serializable,
# like the `EnvOpenOptions` struct.
default = ["serde", "serde-bincode", "serde-json"]

# Use the provided version of LMDB instead of the one that is installed on the system.
vendored = ["lmdb-master3-sys/vendored"]

# The NO_TLS flag is automatically set on Env opening and
# RoTxn implements the Sync trait. This allow the user to reference
# a read-only transaction from multiple threads at the same time.
sync-read-txn = []

# Enable the serde en/decoders for bincode or serde_json
serde-bincode = ["heed-types/serde", "heed-types/bincode"]
serde-json = ["heed-types/serde", "heed-types/serde_json"]

# serde_json features
preserve_order = ["heed-types/preserve_order"]
arbitrary_precision = ["heed-types/arbitrary_precision"]
raw_value = ["heed-types/raw_value"]
unbounded_depth = ["heed-types/unbounded_depth"]
