[package]
name = "heed"
version = "0.20.0-alpha.3"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A fully typed LMDB wrapper with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
keywords = ["lmdb", "database", "storage", "typed"]
categories = ["database", "data-structures"]
readme = "../README.md"
edition = "2021"

[dependencies]
bitflags = {version = "2.3.3", features = ["serde"] }
bytemuck = "1.12.3"
byteorder = { version = "1.4.3", default-features = false }
heed-traits = { version = "0.20.0-alpha.3", path = "../heed-traits" }
heed-types = { version = "0.20.0-alpha.3", default-features = false, path = "../heed-types" }
libc = "0.2.139"
lmdb-master-sys = { version = "0.1.0", path = "../lmdb-master-sys" }
once_cell = "1.16.0"
page_size = "0.5.0"
serde = { version = "1.0.151", features = ["derive"], optional = true }
synchronoise = "1.0.1"

[dev-dependencies]
serde = { version = "1.0.151", features = ["derive"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
tempfile = "3.3.0"

[target.'cfg(windows)'.dependencies]
url = "2.3.1"

[features]
# The `serde` feature makes some types serializable,
# like the `EnvOpenOptions` struct.
default = ["serde", "serde-bincode", "serde-json"]

# The #MDB_NOTLS flag is automatically set on Env opening and
# RoTxn implements the Send trait. This allows the user to move
# a RoTxn between threads as read transactions will no more use
# thread local storage and will tie reader locktable slots to
# #MDB_txn objects instead of to threads.
#
# According to the LMDB documentation, when this feature is not enabled:
# A thread can only use one transaction at a time, plus any child
# transactions. Each transaction belongs to one thread. [...]
# The #MDB_NOTLS flag changes this for read-only transactions.
#
# And a #MDB_BAD_RSLOT error will be thrown when multiple read
# transactions exists on the same thread
read-txn-no-tls = []

# Enable the serde en/decoders for bincode or serde_json
serde-bincode = ["heed-types/serde", "heed-types/bincode"]
serde-json = ["heed-types/serde", "heed-types/serde-json"]

# serde_json features
preserve_order = ["heed-types/preserve_order"]
arbitrary_precision = ["heed-types/arbitrary_precision"]
raw_value = ["heed-types/raw_value"]
unbounded_depth = ["heed-types/unbounded_depth"]

# Whether to tell LMDB to use POSIX semaphores during compilation
# (instead of the default, which are System V semaphores).
# POSIX semaphores are required for Apple's App Sandbox on iOS & macOS,
# and are possibly faster and more appropriate for single-process use.
# There are tradeoffs for both POSIX and SysV semaphores; which you
# should look into before enabling this feature. Also, see here:
# <https://github.com/LMDB/lmdb/blob/3947014aed7ffe39a79991fa7fb5b234da47ad1a/libraries/liblmdb/lmdb.h#L46-L69>
posix-sem = ["lmdb-master-sys/posix-sem"]
