[package]
name = "lmdb-master3-sys"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.1.0"
authors = [
    "Kerollmops <clement@meilisearch.com>",
    "Dan Burkert <dan@danburkert.com>",
    "Victor Porof <vporof@mozilla.com>",
]
license = "Apache-2.0"
description = "Rust bindings for liblmdb on the mdb.master3 branch."
documentation = "https://docs.rs/lmdb-master3-sys"
homepage = "https://github.com/meilisearch/heed/tree/HEAD/lmdb-master3-sys"
repository = "https://github.com/meilisearch/heed.git"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database", "external-ffi-bindings"]
edition = "2021"

# NB: Use "--features bindgen" to generate bindings.
build = "build.rs"

[lib]
name = "lmdb_master3_sys"

[dependencies]
libc = "0.2.132"

[build-dependencies]
pkg-config = "0.3.25"
cc = "1.0.73"
bindgen = { version = "0.60.1", default-features = false, optional = true, features = ["runtime"] }

[features]
default = []
vendored = []
with-asan = ["vendored"]
with-fuzzer = ["vendored"]
with-fuzzer-no-link = ["vendored"]

# These features configure the MDB_IDL_LOGN macro, which determines
# the size of the free and dirty page lists (and thus the amount of memory
# allocated when opening an LMDB environment in read-write mode).
#
# Each feature defines MDB_IDL_LOGN as the value in the name of the feature.
# That means these features are mutually exclusive, and you must not specify
# more than one at the same time (or the crate will fail to compile).
#
# For more information on the motivation for these features (and their effect),
# see https://github.com/mozilla/lmdb/pull/2.
mdb_idl_logn_8 = []
mdb_idl_logn_9 = []
mdb_idl_logn_10 = []
mdb_idl_logn_11 = []
mdb_idl_logn_12 = []
mdb_idl_logn_13 = []
mdb_idl_logn_14 = []
mdb_idl_logn_15 = []
